--- a/src/index.html
+++ b/src/index.html
@@ -8,10 +8,55 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" 
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://fonts.google.com/?selection.family=Open+Sans|Oswald&query=Open+san">
     <link rel="stylesheet" href="style.css">
 
 </head>
 <body>
+
+    <nav class="navbar navbar-expand-lg navbar-light bg-dark">
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#"><i class="fab fa-facebook-square"></i></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#"><i class="fab fa-facebook-square"></i></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#"><i class="fab fa-facebook-square"></i></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#"><i class="fab fa-facebook-square"></i></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#"><i class="fab fa-facebook-square"></i></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#"><i class="fab fa-facebook-square"></i></a>
+                </li>
+            </ul>
+            
+            <a class="nav-link search" href="#"><i class="fas fa-search"></i></a>
+
+        </div>
+    </nav>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-12 title">
+                <h1 class="margint">JANE BLOGLIFE</h1>
+                <p class="marginb">Welcome to the blog of Jane's World</p>
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid bg-img">
+        <img src="img/jane.jpg" alt="jane">
+        <h2 class="fab">Jane's</h2><br>
+        <h1 class="fab">FASHION BLOG</h1>
+        
+    </div>
+
     <script src="https://kit.fontawesome.com/533b96adf8.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" 
     integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
