--- a/src/index.html
+++ b/src/index.html
@@ -18,22 +18,22 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#"><i class="fab fa-facebook-square"></i></a>
+                    <a class="nav-link" href="www.facebook.com"><i class="fab fa-facebook-square"></i></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#"><i class="fab fa-facebook-square"></i></a>
+                    <a class="nav-link" href="www.facebook.com"><i class="fab fa-facebook-square"></i></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#"><i class="fab fa-facebook-square"></i></a>
+                    <a class="nav-link" href="www.facebook.com"><i class="fab fa-facebook-square"></i></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#"><i class="fab fa-facebook-square"></i></a>
+                    <a class="nav-link" href="www.facebook.com"><i class="fab fa-facebook-square"></i></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#"><i class="fab fa-facebook-square"></i></a>
+                    <a class="nav-link" href="www.facebook.com"><i class="fab fa-facebook-square"></i></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#"><i class="fab fa-facebook-square"></i></a>
+                    <a class="nav-link" href="www.facebook.com"><i class="fab fa-facebook-square"></i></a>
                 </li>
             </ul>
             
@@ -52,8 +52,8 @@
     </div>
     <div class="container-fluid bg-img">
         <img src="img/jane.jpg" alt="jane">
-        <h2 class="fab">Jane's</h2><br>
-        <h1 class="fab">FASHION BLOG</h1>
+        <h2 class="fab centered">Jane's</h2><br>
+        <h1 class="fab centered">FASHION BLOG</h1>
         
     </div>
 
