--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" 
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://fonts.google.com/?selection.family=Open+Sans|Oswald&query=Open+san">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 
 </head>
@@ -51,10 +51,73 @@
         </div>
     </div>
     <div class="container-fluid bg-img">
-        <img src="img/jane.jpg" alt="jane">
-        <h2 class="fab centered">Jane's</h2><br>
-        <h1 class="fab centered">FASHION BLOG</h1>
-        
+        <div class="row">
+            <div class="col-12 title centered">
+                <h2 class="fab1">Jane's FASHION BLOG</h2>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-8">
+                <h5 class="title text-center margint">TITLE HEADING</h5>
+                <h6 class="title text center marginb">Title description</h6>
+                    <div class="card" style="width: auto;">
+                        <img src="img/girl_hat.jpg" class="card-img-top" alt="hat lady">
+                        <div class="card-body">
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content. Some quick example text to build on the card title and make up the bulk of the card's content. Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <a href="#" class="btn btn-success">Liek :D</a>
+                            <a href="#" class="btn btn-success" style="float:right">Liek :D</a>
+                        </div>
+                    </div> 
+                <h5 class="title text-center margint">TITLE HEADING</h5>
+                <h6 class="title text center marginb">Title description</h6>
+                    <div class="card" style="width: auto;">
+                        <img src="img/man_hat.jpg" class="card-img-top" alt="hat man">
+                        <div class="card-body">
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content. Some quick example text to build on the card title and make up the bulk of the card's content. Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <a href="#" class="btn btn-success">Liek :D</a>
+                            <a href="#" class="btn btn-success" style="float:right">Liek :D</a>
+                        </div>
+                    </div>
+                <h5 class="title text-center margint">TITLE HEADING</h5>
+                <h6 class="title text center marginb">Title description</h6>
+                    <div class="card" style="width: auto;">
+                        <img src="img/runway.jpg" class="card-img-top" alt="hat lady">
+                        <div class="card-body">
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content. Some quick example text to build on the card title and make up the bulk of the card's content. Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <a href="#" class="btn btn-success">Liek :D</a>
+                            <a href="#" class="btn btn-success" style="float:right">Liek :D</a>
+                        </div>
+                    </div>
+            </div>
+            <div class="col-4">
+                <div class="card margint" style="width: 18rem;">
+                    <img src="img/avatar_girl2.jpg" class="card-img" alt="hat lady">
+                    <div class="card-body card-bg">
+                        <p class="card-text">AVATAR GIRL <br>Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                       
+                    </div>
+                </div>
+                <table class="table margint" style="background-color: black; color: #ffffff;">
+                    <thead>
+                        <tr>
+                            <th scope="col">
+                                Popular posts
+                            </th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>
+                                <img src="img/avatar_smoke.jpg" alt="denim" class="img-thumbnail post-thumb"> 
+                                <span h6>Denim </span h6> <p>lorem ipsum dolor sit amet</p>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
     </div>
 
     <script src="https://kit.fontawesome.com/533b96adf8.js" crossorigin="anonymous"></script>
