--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,7 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-12 ">
+            <div class="col-12">
                 <h1 class="margint titolo">JANE BLOGLIFE</h1>
                 <p class="marginb titolo">Welcome to the blog of Jane's World</p>
             </div>
@@ -53,14 +53,16 @@
     <div class="container-fluid bg-img">
         <div class="row">
             <div class="col-12 centered">
-                <h2 class="fab1">Jane's FASHION BLOG</h2>
-                <button type="button" class="btn btn-danger">SUBSCRIBE</button>
+                <div class="container ">
+                    <h2 class="fab1">Jane's FASHION BLOG</h2>
+                    <button type="button" class="btn btn-danger cazzo">SUBSCRIBE</button>
+                </div>
             </div>
         </div>
     </div>
     <div class="container">
         <div class="row">
-            <div class="col-8">
+            <div class="col-lg-8">
                 <h5 class="titolo text-center margint">TITLE HEADING</h5>
                 <h6 class="titolo text center marginb">Title description</h6>
                     <div class="card" style="width: auto;">
@@ -92,7 +94,7 @@
                         </div>
                     </div>
             </div>
-            <div class="col-4">
+            <div class="col-md-4">
                 <div class="card margint" style="width: 18rem;">
                     <img src="img/avatar_girl2.jpg" class="card-img" alt="hat lady">
                     <div class="card-body card-bg">
