--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-collapse navbar-light bg-dark">
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
                 <li class="nav-item active">
@@ -53,9 +53,9 @@
     <div class="container-fluid bg-img">
         <div class="row">
             <div class="col-12 centered">
-                <div class="container ">
+                <div class="container-fluid">
                     <h2 class="fab1">Jane's FASHION BLOG</h2>
-                    <button type="button" class="btn btn-danger cazzo">SUBSCRIBE</button>
+                    <button type="button" class="btn cazzo">SUBSCRIBE</button>
                 </div>
             </div>
         </div>
@@ -69,8 +69,8 @@
                         <img src="img/girl_hat.jpg" class="card-img-top" alt="hat lady">
                         <div class="card-body">
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content. Some quick example text to build on the card title and make up the bulk of the card's content. Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                            <a href="#" class="btn btn-success">Liek :D</a>
-                            <a href="#" class="btn btn-success" style="float:right">Liek :D</a>
+                            <a href="#" class="btn cazzo">Liek :D</a>
+                            <a href="#" class="btn cazzo" style="float:right">Liek :D</a>
                         </div>
                     </div> 
                 <h5 class="titolo text-center margint">TITLE HEADING</h5>
@@ -79,8 +79,8 @@
                         <img src="img/man_hat.jpg" class="card-img-top" alt="hat man">
                         <div class="card-body">
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content. Some quick example text to build on the card title and make up the bulk of the card's content. Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                            <a href="#" class="btn btn-success">Liek :D</a>
-                            <a href="#" class="btn btn-success" style="float:right">Liek :D</a>
+                            <a href="#" class="btn cazzo">Liek :D</a>
+                            <a href="#" class="btn cazzo" style="float:right">Liek :D</a>
                         </div>
                     </div>
                 <h5 class="titolo text-center margint">TITLE HEADING</h5>
@@ -89,8 +89,8 @@
                         <img src="img/runway.jpg" class="card-img-top" alt="hat lady">
                         <div class="card-body">
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content. Some quick example text to build on the card title and make up the bulk of the card's content. Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                            <a href="#" class="btn btn-success">Liek :D</a>
-                            <a href="#" class="btn btn-success marginb" style="float:right">Liek :D</a>
+                            <a href="#" class="btn cazzo">Liek :D</a>
+                            <a href="#" class="btn cazzo marginb" style="float:right">Liek :D</a>
                         </div>
                     </div>
             </div>
