--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@
                 </li>
             </ul>
             
-            <a class="nav-link search" href="#" style="right: 0px;"><i class="fas fa-search"></i></a>
+            <a class="nav-link pull-right search" href="#" ><i class="fas fa-search"></i></a>
 
         </div>
     </nav>
